--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <section id="showcase">
         <div class="container">
             <h1>Beautiful, Masterful Design Never Goes Out Of Fashion.</h1>
-            <p>
+            <!-- <p>
                 Whether passed down from ancestors or gifted to a loved one, jewelry is a statement of fashion,
                 luxury and nobility all around the world.
-            </p>
+            </p> -->
         </div>
     </section>
 
@@ -47,31 +47,37 @@
 
     <section id="boxes">
         <div class="container">
-            <div class="box">
-                <img src="img/gold-3.jpg">
-                <h3>GOLD</h3>
-                <p>The high skill of the Etruscan goldsmiths is largely revealed by the incomparable quality, delicacy, 
-                    and complexity of the filigree and granulation patterns of their jewellery, 
-                    as well as by the thinness of the gold foils employed and the excellence of the joining techniques.</p>
-            </div>
-            <div class="box">
-                <img src="img/silver-5.jpg" alt="">
-                <h3>SILVER</h3>
-                <p>We brings you silver collections and choose from an exquisite collection of silver jewellery, 
-                    pooja accessories, coins and bars. Jewellery available in both elaborate traditional designs and 
-                    modern minimalistic styles. These stunning pieces of silver jewellery are sure to impress you.</p>
-            </div>
-            <div class="box">
-                <img src="img/diamond-4.jpg" alt="">
-                <h3>DIAMOND</h3>
-                <p>Every diamond is a miracle of time and place and chance. Like snowflakes, no two are exactly alike. 
-                    Until the middle of the twentieth century, there was no agreed-upon standard by which diamonds could be judged.</p>
-            </div>
+            <a href="">
+                <div class="box">
+                    <img src="img/gold-3.jpg">
+                    <h3>GOLD</h3>
+                    <p>The high skill of the Etruscan goldsmiths is largely revealed by the incomparable quality, delicacy, 
+                        and complexity of the filigree and granulation patterns of their jewellery, 
+                        as well as by the thinness of the gold foils employed and the excellence of the joining techniques.</p>
+                </div>
+            </a>
+            <a href="">
+                <div class="box">
+                    <img src="img/silver-5.jpg" alt="">
+                    <h3>SILVER</h3>
+                    <p>We brings you silver collections and choose from an exquisite collection of silver jewellery, 
+                        pooja accessories, coins and bars. Jewellery available in both elaborate traditional designs and 
+                        modern minimalistic styles. These stunning pieces of silver jewellery are sure to impress you.</p>
+                </div>
+            </a>
+            <a href="">
+                <div class="box">
+                    <img src="img/diamond-4.jpg" alt="">
+                    <h3>DIAMOND</h3>
+                    <p>Every diamond is a miracle of time and place and chance. Like snowflakes, no two are exactly alike. 
+                        Until the middle of the twentieth century, there was no agreed-upon standard by which diamonds could be judged.</p>
+                </div>
+            </a>
         </div>
     </section>
 
     <footer>
-        <p> Jwellers, Copyright &copy; 2018 </p>
+        <p> Sagar Jwellers, Copyright &copy; 2018 </p>
     </footer>
 </body>
 </html>
